--- a/facebook-clone/src/components/ChatApp.css
+++ b/facebook-clone/src/components/ChatApp.css
@@ -35,7 +35,9 @@
   
   .food-image {
     width: 100%;
+    height: 350px; /* Ensures the image scales to fit */
     border-radius: 10px;
+    object-fit: cover;
     border: 4px solid #5C95FF;
   }
   
@@ -100,8 +102,8 @@
     align-items: center;
     gap: 10px;
     border-radius: 20px;
-    padding: 8px;
-    margin-bottom: 5px;
+    padding: 3px;
+    margin-bottom: 3px;
 
   }
   
