--- a/facebook-clone/src/components/main.css
+++ b/facebook-clone/src/components/main.css
@@ -14,3 +14,20 @@
     border-radius: 20px;
     overflow: hidden;
   }
+
+
+  /* Hide scrollbar for all modern browsers */
+.overflow-y-auto {
+  overflow-y: scroll; /* Enable scrolling */
+}
+
+.overflow-y-auto::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for WebKit browsers (e.g., Chrome, Safari) */
+}
+
+.overflow-y-auto {
+  -ms-overflow-style: none; /* Hide scrollbar for Internet Explorer and Edge */
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
+}
+
+  
